--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi my name is Jose Alberto Ramos, I am passionate about artificial intelligence, I currently have a role in <strong>Rappi</strong>.
-          When I don't have to be working, I have the full stack developer as a hobby.
-          </p>
+          <p>Hi, my name is Jose Alberto Ramos. I'm passionate about artificial intelligence and currently i'm working at <strong>Rappi</strong>. I enjoy my free time being a
+            full stack developer, a hobby that has become one of my favorites</p>
         </div>
 
         <div class="row">
